# LaneZero

./: .clang-format  .gitignore  AGENTS.md  CAMERA_CONTROLS.md  CMakeLists.txt  Makefile  OPENSCENARIO_IMPLEMENTATION.md  PHYSICS_ENGINE_IMPLEMENTATION.md  README.md  build.sh  ruff.toml  run_example.sh  setup.py  setup_env.sh  test_viewer_vehicles.py
.github/workflows/: build-test.yml  lint.yml  validate-json.yml
LaneZero/: __init__.py
LaneZero/viewer/: __init__.py  _gui.py  _simulation_viewer.py  _viewer_core.py
data/map/: simple_highway.json  two_road.json
data/scenario/: npc_cut_in.json
devbin/: validate_maps.py  validate_scenarios.py
examples/: basic_simulation.py  collision_detection_example.py  cut_in_planner_example.py  lane_keeping_example.py  openscenario_example.py  physics_engine_example.py  two_road_example.py  viewer_demo.py
gtest/: CMakeLists.txt  test_collision.cpp  test_main.cpp
schema/: __init__.py  map.py  scenario.py
scripts/: LaneZeroView.py
src/: Map.cpp  Map.h  Simulation.cpp  Simulation.h  Vehicle.cpp  Vehicle.h  main.cpp  pymod.cpp
src/collision/: CollisionDetection.h
src/collision/pymod/: wrap_CollisionDetection.cpp
src/map/: Map.cpp  Map.h
src/map/pymod/: wrap_Map.cpp
src/physics_engine/: BicycleModelEngine.cpp  BicycleModelEngine.h  PhysicsEngine.h
src/physics_engine/pymod/: wrap_PhysicsEngine.cpp
src/planner/: BehaviorPlanner.cpp  BehaviorPlanner.h  ControlPlanner.cpp  ControlPlanner.h  MotionPlanner.cpp  MotionPlanner.h  PlanningOrchestrator.cpp  PlanningOrchestrator.h
src/planner/pymod/: wrap_planners.cpp
src/scenario/: Goal.h  Scenario.cpp  Scenario.h
src/scenario/pymod/: wrap_Scenario.cpp
src/simulation/: Simulation.cpp  Simulation.h  WorldState.h
src/simulation/pymod/: Wrap_Simulation.cpp  Wrap_WorldState.cpp
src/vehicle/: Vehicle.cpp  Vehicle.h
src/vehicle/pymod/: wrap_Vehicle.cpp
src/viewer/: RManager.cpp  RManager.hpp  RenderWidget.cpp  RenderWidget.hpp  viewer.hpp  wrap_viewer.cpp  wrap_viewer.hpp
test/: CMakeLists.txt  test_collision.py  test_lane_keeping.py  test_main.cpp  test_map.py  test_scenario.py  test_simulation.py  test_vehicle.py  test_viewer.py
